Mon Aug  9 06:38:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.5.h:
          Fixed compile error

Mon Aug  9 06:35:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
          Removed zapped file

Sun Aug  8 23:31:32 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-snowleopard.h:

          Clang uses ACE_ANY_OPS_USE_NAMESPACE.

Fri Aug  6 17:36:45 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/fuzz.pl:

          Added a "trailing whitespace" check (not enabled by default).
          Added the ability to pass multiple test names on the command line.
          Extend the "too long file name" check to some additional file types.

Fri Aug  6 08:39:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/TMCast/TMCast.mpc:
          Removed exceptions as base project

Thu Aug  5 16:56:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/tmcast.mpb:
        * protocols/tests/RMCast/RMCast.mpc:
          Removed exceptions as base project

Thu Aug  5 09:00:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/ACE_crc32.cpp:
        * ace/ACE_crc_ccitt.cpp:
        * ace/ARGV.cpp:
        * ace/ATM_Acceptor.cpp:
        * ace/ATM_Addr.cpp:
        * ace/ATM_Connector.cpp:
        * ace/ATM_Params.cpp:
        * ace/ATM_QoS.cpp:
        * ace/ATM_Stream.cpp:
        * ace/Acceptor.cpp:
        * ace/Activation_Queue.cpp:
        * ace/Active_Map_Manager.cpp:
        * ace/Addr.cpp:
        * ace/Arg_Shifter.cpp:
        * ace/Argv_Type_Converter.cpp:
        * ace/Assert.cpp:
        * ace/Asynch_Acceptor.cpp:
        * ace/Asynch_IO.cpp:
        * ace/Asynch_Pseudo_Task.cpp:
        * ace/Atomic_Op.cpp:
        * ace/Atomic_Op_GCC_T.cpp:
        * ace/Atomic_Op_T.cpp:
        * ace/Auto_Ptr.cpp:
        * ace/Barrier.cpp:
        * ace/Base_Thread_Adapter.cpp: